Fix misalignment tab items in uplift theme

--- a/src/components/tabs-module/_tabs-module-uplift.scss
+++ b/src/components/tabs-module/_tabs-module-uplift.scss
@@ -4,16 +4,17 @@
 .tab-container.module-tabs {
   .tab {
     > a {
-      padding: 5px 6px 9px;
+      padding: 7px 6px;
     }
 
     &.dismissible {
       a {
-        padding: 5px 35px 9px 6px;
+        padding: 7px 35px 7px 6px;
       }
 
       .icon {
         height: 11px;
+        margin-top: 1px;
       }
     }
 
